--- a/src/app/cadastro/cadastro.page.html
+++ b/src/app/cadastro/cadastro.page.html
@@ -1,9 +1,41 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>cadastro</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button> </ion-back-button>
+    </ion-buttons>
+    <ion-title>Cadastro</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+<form [formGroup]="formCadastro">
 
+  <ion-item>
+    <ion-label position="floating">Nome</ion-label>
+    <ion-input formControlName="nome"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label position="floating">CPF</ion-label>
+    <ion-input formControlName="cpf"></ion-input>
+  </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">E-mail</ion-label>
+      <ion-input formControlName="email"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">Senha</ion-label>
+      <ion-input type="password" formControlName="senha"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">Confirmar Senha</ion-label>
+      <ion-input type="password" formControlName="confirmarSenha"></ion-input>
+    </ion-item>
+
+    <ion-button expand="block" fill="outline" color="tertiary" (click)="salvarCadastro">SALVAR</ion-button>
+
+</form>
 </ion-content>
