--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -3,6 +3,12 @@
     <ion-title>
       Usuários
     </ion-title>
+
+      <ion-buttons slot="end" >
+        <ion-button routerLink="/cadastro">
+          <ion-icon slot= "icon-only" name="person-add-outline"></ion-icon>
+        </ion-button>
+</ion-buttons>
   </ion-toolbar>
 </ion-header>
 
