--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,14 +1,12 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Usuários
-    </ion-title>
+    <ion-title> Usuários </ion-title>
 
-      <ion-buttons slot="end" >
-        <ion-button routerLink="/cadastro">
-          <ion-icon slot= "icon-only" name="person-add-outline"></ion-icon>
-        </ion-button>
-</ion-buttons>
+    <ion-buttons slot="end">
+      <ion-button routerLink="/cadastro">
+        <ion-icon slot="icon-only" name="person-add-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -18,6 +16,4 @@
       <ion-title size="large">Tab 1</ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container>
 </ion-content>
