--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -11,9 +11,21 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-item-sliding *ngFor="let user of listaUsuarios">
+<ion-item>
+  <ion-label>
+    <div>
+      <h1>{{user.nome}}</h1>
+      <span style="float: right;"> {{user.cpf}} </span>
+      <a href="mailto: {{user.email}}"> {{user.email}} </a>
+    </div>
+  </ion-label>
+</ion-item>
+
+      <ion-item-options side="end">
+        <ion-item-option (click)="excluirCadastro(user.email)">
+          <ion-icon name="trash"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
 </ion-content>
