--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,31 +1,27 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title> Usuários </ion-title>
+    <ion-title> <h1>Usuários</h1> </ion-title>
 
     <ion-buttons slot="end">
-      <ion-button routerLink="/cadastro">
+      <ion-button>
         <ion-icon slot="icon-only" name="person-add-outline"></ion-icon>
       </ion-button>
+
     </ion-buttons>
   </ion-toolbar>
+
 </ion-header>
 
 <ion-content [fullscreen]="true">
-<ion-item-sliding *ngFor="let user of listaUsuarios">
-<ion-item>
-  <ion-label>
-    <div>
-      <h1>{{user.nome}}</h1>
-      <span style="float: right;"> {{user.cpf}} </span>
-      <a href="mailto: {{user.email}}"> {{user.email}} </a>
-    </div>
-  </ion-label>
-</ion-item>
 
-      <ion-item-options side="end">
-        <ion-item-option (click)="excluirCadastro(user.email)">
-          <ion-icon name="trash"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
+  <ion-grid class="b1">
+
+    <ion-button class="ion-text-center" fill="outline" expand="block" color="dark" routerLink="/login"> LOGIN</ion-button>
+
+  <ion-button routerLink="/cadastro" expand="block" fill="outline" color="dark">REGISTRO</ion-button>
+
+  </ion-grid>
+
+
 </ion-content>
+
