--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,15 +1,29 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+     <h1>Registros</h1>
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-grid>
+  <ion-item-sliding *ngFor="let user of listaUsuarios">
+    <ion-item>
+      <ion-label>
+        <div>
+          <h1>{{user.nome}}</h1>
+          <span style="float: right"> {{user.cpf}} </span>
+          <a href="mailto: {{user.email}}"> {{user.email}} </a>
+        </div>
+      </ion-label>
+    </ion-item>
+
+    <ion-item-options side="end">
+      <ion-item-option color="danger" (click)="excluirCadastro(user.email)">
+        <ion-icon name="trash"></ion-icon>
+      </ion-item-option>
+    </ion-item-options>
+  </ion-item-sliding>
+</ion-grid>
 </ion-content>
